# Ankismart

./: .gitignore  README.md  pyproject.toml
.dish/: workspace-id
.github/workflows/: build-packages.yml  quality-gate.yml
docs/: changelog.md  contributing.md
docs/plans/: 2026-03-12-settings-page-redesign.md  2026-03-17-startup-speed-optimization-plan.md
packaging/: ankismart.iss  build.py  build_portable.py
scripts/: dev_demo.py
src/ankismart/anki_gateway/: apkg_exporter.py  gateway.py  styling.py  template_enhancer.py  validator.py
src/ankismart/card_gen/: __init__.py  card_format_parsers.py  card_kind.py  card_normalizer.py  card_pipeline.py  card_structure_validator.py  generator.py  prompts.py  (+2 more)
tests/: test_packaging_build.py  test_theme.py  test_window.py
tests/e2e/: conftest.py
tests/test_anki_gateway/: test_apkg_exporter.py  test_client.py  test_gateway.py  test_validator.py
tests/test_card_gen/: test_card_format_parsers.py  test_card_kind.py  test_card_normalizer.py  test_card_structure_validator.py  test_generator.py  test_llm_client.py  test_postprocess.py
tests/test_converter/: test_cache.py  test_converter_pipeline.py  test_ocr_converter.py
tests/test_core/: test_config.py  test_logging.py  test_task_models.py  test_task_store.py
tests/test_ui/: import_page_test_utils.py  test_card_edit_widget.py  test_card_preview_page.py  test_import_page_generation.py  test_import_page_navigation.py  test_import_page_start_convert.py  test_preview_page.py  test_result_page.py  test_settings_page_config.py  test_settings_page_connectivity.py  test_settings_page_provider_ui.py  test_styles.py  test_task_center.py  test_task_runtime.py  test_workers.py
(+31 files in other folders)
