[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankismart"
version = "0.2"
description = "Intelligent Anki flashcard generation from documents"
requires-python = ">=3.11"
dependencies = [
    "pyqt6==6.10.2",
    "openai>=1.0",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
    "genanki>=0.13",
    "cryptography>=41.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "chardet>=5.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "pypdfium2>=4.30",
    "pyqt6-fluent-widgets==1.11.1",
]

[project.scripts]
ankismart = "ankismart.ui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ankismart.ui" = ["assets/*.ico"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "p0: 发布门禁必须通过的 E2E 场景",
    "p1: 建议通过的 E2E 场景",
    "fast: 快速回归 E2E 场景",
    "gate: 发布门禁 E2E 场景",
    "gate_real: 更少 mock 的发布门禁 E2E 场景",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "src/ankismart/core",
    "src/ankismart/converter",
    "src/ankismart/card_gen",
    "src/ankismart/anki_gateway",
]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N806"]
